# gotfr-sec

./: .gitignore  .gitmodules  README.md  pyproject.toml
.github/: copilot-instructions.md
app/: __init__.py  bootstrap.py  main_web.py  settings.py
app/api/: __init__.py  dependencies.py
app/domain/: __init__.py  errors.py  models.py  rules.py
app/repositories/: __init__.py  audit.py  in_memory.py  interfaces.py  vault_groups.py  vault_paths.py  vault_tokens.py  vault_users.py
app/services/: __init__.py  admin_group_service.py  bootstrap_service.py  runtime_service.py  token_service.py  user_registration_service.py
app/web_server/: __init__.py  web_server.py
docker/: Dockerfile.dev  build-dev.sh  entrypoint-dev.sh  run-dev.sh
docs/: gofr_sec_impl_plan.md  gofr_sec_proposal.md  phase_7_5_manual_verification.md
scripts/: run_tests.sh
test/: conftest.py
test/api/: test_admin_groups.py  test_admin_memberships.py  test_admin_tokens.py  test_me_profile.py  test_me_register.py  test_me_tokens.py  test_status.py
test/code_quality/: test_code_quality.py  test_imports.py
test/config/: test_phase1_settings.py  test_settings.py
test/domain/: test_bootstrap_rules.py  test_groups.py  test_registration_rules.py  test_token_rules.py  test_user_profiles.py
test/integration/: test_admin_audit_events.py  test_bootstrap_service.py  test_token_storage_layout.py  test_vault_paths.py  test_vault_repositories.py
test/runtime/: test_authorize_api.py  test_public_key_endpoint.py
test/security/: test_admin_authz.py  test_denial_normalization.py  test_signing_keys.py  (+1 more)
(+14 files in other folders)
