[project]
name = "gofr-sec"
version = "0.1.0"
description = "Security service scaffold for GOFR"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
# Note: gofr-common is installed as editable from lib/gofr-common by docker/entrypoint-dev.sh
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
gofr-sec-web = "app.main_web:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "pyright>=1.1.0",
    "bandit>=1.7.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = [".", "lib/gofr-common/src"]
addopts = "--strict-markers"
markers = [
    "vault_integration: tests requiring an ephemeral or external Vault instance",
    "keycloak_contract: tests exercising Keycloak/OIDC contract behavior",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "*/__pycache__/*",
    "*/test/*",
    "*/tests/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_empty = true